[tool.poetry]
name = "LickingDogAPI"
version = "1.0.0"
description = "舔狗API"
authors = ["llxlr <i@xhlr.top>"]
homepage = "https://api.white-album.top/"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
aiofiles = ">=^0.5.0"
aiohttp = "^3.7.4.post0"
baidu-aip = "^2.2.18.0"
beautifulsoup4 = "^4.9.3"
bilibili_api = ">=^5.0.3"
cffi = "^1.14.4"
click = "^7.1.2"
cssutils = "^1.0.2"
email-validator = "^1.1.2"
eliot = "^1.13.0"
eliot-tree = "^21.0.0"
fake-useragent = "^0.1.11"
fastapi = "<=^0.65.2"
faust = "^1.10.4"
graphene = "^2.1.8"
gunicorn = "^20.0.4"
Jinja2 = "^2.11.3"
loguru = "^0.5.3"
lxml = "^4.6.2"
MyQR = "^2.3.1"
# numpy = "^1.20.0"
# opencv-python = "^4.4.0.46"
orjson = "^3.5.1"
# pandas = "^1.1.4"
Pillow = ">=^8.2.0"
pixivpy = "^3.5.10"
# playwright = "^0.171.1"
pydantic = "^1.8.2"
# PyMySQL = "^0.10.1"
# pysnooper = "^0.4.2"
python = ">=3.7,<4.0"
python-dotenv = "^0.15.0"
python-multipart = "^0.0.5"
requests = "^2.25.1"
ruia = "^0.8.4"
selenium = "^3.141.0"
slowapi = "^0.1.4"
sqlalchemy = "^1.3.23"
starlette = ">=^0.14.2"
twint = "^2.1.20"
uvicorn = "^0.14.0"
yagmail = "^0.14.256"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[[tool.poetry.source]]
name = "bfsu"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"

[build-system]
requires = ["poetry-core>=1.2.0a1"]
build-backend = "poetry.core.masonry.api"
