[tool.poetry]
name = "LickingDogAPI"
version = "1.0.0"
description = "舔狗API"
authors = ["llxlr <i@xhlr.top>"]
homepage = "https://api.white-album.top/"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

aiofiles = ">=0.5.0"
aiohttp = "^3.7.4.post0"
aiomysql = "^0.0.21"
aioredis = "^1.3.1"
baidu-aip = "^2.2.18.0"
beautifulsoup4 = "^4.9.3"
bilibili_api = "^6.1.2"
celery = "^5.1.2"
cffi = "^1.14.5"
click = "^7.1.2"
cssutils = "^1.0.2"
email-validator = "^1.1.2"
eliot = "^1.13.0"
eliot-tree = "^21.0.0"
fake-useragent = "^0.1.11"
fastapi = "^0.66.0"
faust = "^1.10.4"
graphene = "^2.1.8"
gunicorn = "^20.1.0"
Jinja2 = "^2.11.3"
loguru = "^0.5.3"
lxml = "^4.6.2"
MyQR = "^2.3.1"
# numpy = "^1.20.3"
# opencv-python = "^4.4.0.46"
orjson = "^3.5.3"
# pandas = "^1.1.5"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
Pillow = "^8.3.1"
pixivpy = "^3.6.0"
pixivpy-async = "^1.2.12"
# playwright = "^0.171.1"
pydantic = "^1.8.2"
PyMySQL = "^0.9.3"
# pysnooper = "^0.4.2"
python-dotenv = "^0.18.0"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
python-multipart = "^0.0.5"
requests = "^2.25.1"
ruia = "^0.8.4"
selenium = "^3.141.0"
slowapi = "^0.1.4"
SQLAlchemy = "^1.4.22"
starlette = ">=0.14.2"
twint = "^2.1.20"
uvicorn = {version = "^0.14.0", extras = ["standard"]}
yagmail = "^0.14.256"

[tool.poetry.dev-dependencies]
pycparser = "^2.20"
pytest = "^6.2.4"

[[tool.poetry.source]]
name = "bfsu"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
default = true

[build-system]
requires = ["poetry-core>=1.2.0a1"]
build-backend = "poetry.core.masonry.api"
